# kano-toolset

./: .coveragerc  .gitignore  Jenkinsfile  Makefile  README.md  README.rst  TRANSLATION.md  backend-api.js  email-sender  email_sender.py  iospeed  is_internet  kano-email-register  kano-launcher  kano-launcher-no-kill-list  kano-launcher.py  kano-progress-register  kano-screen-settings  kano-shutdown  kano-window-tool  kano_utilslib.py  kanoapplib.py  make-common  make-common.sh  make-focus  make-focus.py  pytest.ini  pythontest.mk  requirements-dev.txt  rpi-info
CSS/: buttons.css  common.css  dialog.css  style.css
bash/: logger.sh  logging.sh  logging_bash.sh  logging_py.sh
debian/: changelog  control  copyright  kano-toolset-i18n-orig.install  kano-toolset.install  kano-toolset.links  libkano-c-logging-dbg.install  libkano-c-logging-dev.install  libkano-c-logging.install  libkano-c-logging.links  libkano-dbg.install  libkano-dev.install  libkano-networking-dbg.install  libkano-networking-dev.install  libkano-networking.install  libkano-networking.links  libkano-python-dbg.install  postinst  (+11 more)
kano-keys-pressed/: CMakeLists.txt  Makefile  README.md  hid.cpp  hid.h  kano-keys-pressed.cpp
kano-keys-pressed/src/: hid.cpp  hotkeys.cpp  kano-keys-pressed.cpp
kano-keys-pressed/src/include/: hid.h  hotkeys.h
kano-keys-pressed/tests/: CMakeLists.txt
kano-keys-pressed/tests/src/: test_hotkeys.cpp
kano-keys-pressed/tests/src/fixtures/: key.h  keys_data.h  mock_ioctl.h
kano-keys-pressed/tests/src/stubs/linux/: input.h
kano-keys-pressed/tests/src/stubs/sys/: ioctl.h
(+172 files in other folders)
